--- a/AgentSystemClient/WebContent/app/views/agent.html
+++ b/AgentSystemClient/WebContent/app/views/agent.html
@@ -1,5 +1,8 @@
 
+	<button class="btn btn-success" ng-click="sendAclMessage()" >Acl message</button>
+
 <div class="container">
+
 	<div class="col-md-6">
 		<h3>Running agents</h3>
 		<table class="table">
