--- a/AgentSystemClient/WebContent/app/views/aclModal.html
+++ b/AgentSystemClient/WebContent/app/views/aclModal.html
@@ -7,18 +7,106 @@
             <h4 class="modal-title text-center">New Acl Message</h4>
         </div>
         <div class="modal-body">
-           <div class="form-group">
-                <label for="reason" class="col-xs-10 col-sm-3 control-label">Name</label>
+           
+             <div class="form-group">
+                <label for="" class="col-xs-10 col-sm-3 control-label">Performatives</label>
                 <div class="col-sm-9">
-                    <input type="author" class="form-control" ng-model="name" placeholder="" required>
+                    <div uib-dropdown>
+                        <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
+                            {{ currPerformative }} <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                            <li ng-repeat="p in performatives">
+                                <a ng-click="selectPerformative(p)">{{p}} </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
+            
+            <div class="form-group">
+                <label for="" class="col-xs-10 col-sm-3 control-label">Sender</label>
+                <div class="col-sm-9">
+                    <div uib-dropdown>
+                        <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
+                            {{ currSender.name }} <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                            <li ng-repeat="s in agents">
+                                <a ng-click="selectSender(s)">{{s.name}} </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
+                
+            <div class="form-group">
+                <label for="" class="col-xs-10 col-sm-3 control-label">Receivers</label>
+                <div class="col-sm-9">
+                    <div uib-dropdown>
+                        <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
+                            {{ currReceiver.name }} <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                            <li ng-repeat="r in agents">
+                                <a ng-click="selectReceiver(r)">{{r.name}} </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            
+                  <div class="form-group">
+                <label for="" class="col-xs-10 col-sm-3 control-label">Reply to</label>
+                <div class="col-sm-9">
+                    <div uib-dropdown>
+                        <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
+                            {{ currReplayTo.name }} <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" uib-dropdown-menu role="menu" aria-labelledby="single-button">
+                            <li ng-repeat="s in agents">
+                                <a ng-click="selectReplayTo(s)">{{s.name}} </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+           
+           <div class="form-group">
+                <label for="address" class="col-xs-10 col-sm-3 control-label">Content</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" ng-model="aclMsg.content">
+                </div>
+            </div>
+            
+            <div class="form-group">
+                <label for="address" class="col-xs-10 col-sm-3 control-label">Protocol</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" ng-model="aclMsg.protocol">
+                </div>
+            </div>
+            
+              <div class="form-group">
+                <label for="address" class="col-xs-10 col-sm-3 control-label">Encoding</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" ng-model="aclMsg.encoding">
+                </div>
+            </div>
+            
+              <div class="form-group">
+                <label for="address" class="col-xs-10 col-sm-3 control-label">Ontology</label>
+                <div class="col-sm-9">
+                    <input type="text" class="form-control" ng-model="aclMsg.ontology">
+                </div>
+            </div>
+           
         </div>
 
         <!-- footer that defines the cancel button and submit button  -->
         <div class="modal-footer">
             <button ng-click="cancel()" type="button" class="btn btn-warning">Cancel</button>
-            <button type="submit" class="btn btn-primary">Senc acl</button>
+            <button type="submit" class="btn btn-primary">Send acl</button>
         </div>
     </form>
 </div>
