--- a/AgentSystemClient/WebContent/app/views/cluster.html
+++ b/AgentSystemClient/WebContent/app/views/cluster.html
@@ -1,7 +1,12 @@
 <div class="container">
 
-	<button class="btn btn-success" ng-click="register()" >Register</button>
-	<button class="btn btn-success" ng-click="unregister()" >Unregister</button>
+	
+	<button class="btn btn-success" ng-click="register()" ng-if="isRegistered == false">Register</button>
+	<button class="btn btn-success" ng-click="unregister()"  ng-if="isRegistered == true">Unregister</button>
+
+	<h4 ng-if="masterAddr == ''">You are the master, you are our leader</h4>
+	
+	<h4 ng-if="masterAddr != ''">Master ip: {{ masterAddr}}</h4>
 
 	<div class="col-md-6">
 		<h3>Nodes</h3>
