fix for stopping agent

--- a/AgentSystemClient/WebContent/app/views/agent.html
+++ b/AgentSystemClient/WebContent/app/views/agent.html
@@ -19,7 +19,7 @@
 	        <td>{{ agent.name}}</td>
 	        <td>{{ agent.type.name}}</td>
 	        <td>{{ agent.host.alias}}</td>
-	        <td><button class="btn btn-danger" ng-click="stopAgent(agent.aids)">Stop</button></td>
+	        <td><button class="btn btn-danger" ng-click="stopAgent(agent)">Stop</button></td>
 	      </tr>
 	
 	   
