Global logger service added

--- a/AgentSystemClient/WebContent/app/views/agent.html
+++ b/AgentSystemClient/WebContent/app/views/agent.html
@@ -51,5 +51,17 @@
 	
 	    </tbody>
 	  </table>
-  </div>	
+  </div>
+  
+  <footer class="navbar-fixed-bottom">
+  	<div class="class="well">
+	  <ul>
+	  	<li ng-repeat="msg in logMessages">
+	   		{{ msg }}
+	  	</li>
+	  	
+	  </ul>
+	</div>
+  </footer>
+  	
 </div>
