added style for console, and fixed adding agents, agents with same name will not be added

--- a/AgentSystemClient/WebContent/app/css/main.css
+++ b/AgentSystemClient/WebContent/app/css/main.css
@@ -1,3 +1,12 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+}
+
 .wrapper {    
 	margin-top: 80px;
 	margin-bottom: 20px;
@@ -58,3 +67,20 @@ input[type="password"] {
   background-image: -o-linear-gradient(left, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
   background-image: linear-gradient(to right, #c4e17f, #c4e17f 12.5%, #f7fdca 12.5%, #f7fdca 25%, #fecf71 25%, #fecf71 37.5%, #f0776c 37.5%, #f0776c 50%, #db9dbe 50%, #db9dbe 62.5%, #c49cde 62.5%, #c49cde 75%, #669ae1 75%, #669ae1 87.5%, #62c2e4 87.5%, #62c2e4);
 }
+
+.panel-default > .panel-heading-custom {
+    background: #000000; 
+    color: #ffffff;
+}
+
+.panel-body {
+	background:#000000;
+	color: #ffffff;
+}
+
+.fixed-panel {
+  min-height: 200px;
+  max-height: 200px;
+  overflow-y: scroll;
+}
+
