--- a/AgentSystemClient/WebContent/app/views/promo.html
+++ b/AgentSystemClient/WebContent/app/views/promo.html
@@ -7,3 +7,15 @@
             <h3>Sick of doing stuff yourself hire an agent </h3>
         </div>
     </div>
+    
+    <div class="container">
+    
+    <div class='col-md-3 col-md-offser-3'>
+    	 <button class="btn btn-primary" ng-click="rest()">USE REST</button>
+    </div>
+    
+    <div class='col-md-3'>
+    	 <button class="btn btn-primary" ng-click="websocket()">WEB SOCKET</button>
+    </div>
+  
+    </div>
